--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "cSpell.ignoreWords": [
         "Combinators",
-        "colour"
+        "colour",
+        "ispqu"
     ],
     "cSpell.words": [
         "ccfnkh",
